@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-11T00:51:30Z",
+  "timestamp" : "2025-04-12T00:50:36Z",
   "count_outdated" : 1279,
   "uniques_outdated" : 801,
-  "count" : 1288,
-  "uniques" : 810,
+  "count" : 1289,
+  "uniques" : 811,
   "clones" : [
     {
       "timestamp": "2025-04-01T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2025-04-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
