@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 3,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2025-04-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
