@@ -1,3 +1,12 @@
+2025-04-12T00:50:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14414458325 # 611
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-12
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 801 1279 / 810 1288
+* notice: next accum: outdated-unq outdated-all / unq all: 801 1279 / 811 1289
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-04-11]
+
 2025-04-11T00:51:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14393183096 # 610
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-11
